feat: Setup core tooling and workspace configuration
- Initialize Clarinet for smart contract development in /contracts
- Create package.json for backend, frontend, and oracle-service workspaces
- Add TypeScript configurations for all Node.js services
- Configure Vite for frontend React development
- Remove branding references from development files (keep UnitedProfit only for UI)
- Clean up existing frontend boilerplate files
- Setup monorepo workspace structure with proper dependencies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unitedprofit-monorepo",
+  "name": "pools-monorepo",
   "version": "1.0.0",
-  "description": "UnitedProfit: Decentralized group investment pooling platform",
+  "description": "Decentralized group investment pooling platform",
   "private": true,
   "type": "module",
   "workspaces": [
@@ -29,6 +29,6 @@
     "group-investment",
     "profit-sharing"
   ],
-  "author": "UnitedProfit Team",
+  "author": "Development Team",
   "license": "MIT"
 }
