feat: Create smart contract architecture skeleton
- Add group-factory.clar: Main contract for creating and managing investment groups
- Add escrow-stx.clar: Shared escrow contract (Model A) for holding STX contributions
- Add escrow-template.clar: Template contract for per-group instances (Model B)
- Add oracle-registry.clar: Registry for managing oracle attestations and settlements
- Add settlement.clar: Contract for settlement calculations and profit/loss distribution
- Add sip010-mock-token.clar: Mock SIP-010 token for testing stablecoin functionality
- Update Clarinet.toml: Register all 6 contracts with proper configuration

Core functionality included:
- Data structures for groups, members, escrow, attestations
- Function signatures for create  join  attest  settle  claim workflow
- Error codes and authorization checks
- Support for both escrow models (shared vs per-group)
- SIP-010 compliance preparation for token support

--- a/contracts/Clarinet.toml
+++ b/contracts/Clarinet.toml
@@ -1,13 +1,33 @@
 [project]
 name = "contracts"
-description = ""
+description = "Group investment pooling smart contracts"
 authors = []
 telemetry = true
 cache_dir = "./.cache"
 
-# [contracts.counter]
-# path = "contracts/counter.clar"
-# epoch = "latest"
+[contracts.group-factory]
+path = "contracts/group-factory.clar"
+epoch = "latest"
+
+[contracts.escrow-stx]
+path = "contracts/escrow-stx.clar"
+epoch = "latest"
+
+[contracts.escrow-template]
+path = "contracts/escrow-template.clar"
+epoch = "latest"
+
+[contracts.oracle-registry]
+path = "contracts/oracle-registry.clar"
+epoch = "latest"
+
+[contracts.settlement]
+path = "contracts/settlement.clar"
+epoch = "latest"
+
+[contracts.sip010-mock-token]
+path = "contracts/sip010-mock-token.clar"
+epoch = "latest"
 
 [repl.analysis]
 passes = ["check_checker"]
