--- a/backend/package.json
+++ b/backend/package.json
@@ -16,23 +16,17 @@
     "cors": "^2.8.5",
     "helmet": "^7.0.0",
     "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "joi": "^17.9.2",
-    "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
-    "@types/pg": "^8.10.2",
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.9",
+    "@types/uuid": "^9.0.7",
     "@types/node": "^20.4.5",
     "typescript": "^5.1.6",
     "tsx": "^3.12.7",
-    "jest": "^29.6.2",
-    "@types/jest": "^29.5.3",
-    "ts-jest": "^29.1.1",
     "eslint": "^8.45.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0"
