--- a/backend/package.json
+++ b/backend/package.json
@@ -12,23 +12,25 @@
     "lint": "eslint src --ext .ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/pg": "^8.15.5",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "morgan": "^1.10.0",
+    "pg": "^8.16.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.9",
-    "@types/uuid": "^9.0.7",
     "@types/node": "^20.4.5",
-    "typescript": "^5.1.6",
-    "tsx": "^3.12.7",
-    "eslint": "^8.45.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0"
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6"
   }
 }
