feat: Complete Oracle Service Implementation with Heavy Stacks Integration
 Major Features:
- Full oracle attestation service with automated settlement
- Heavy Stacks blockchain integration for Ascend program compliance
- Investment period tracking with equal profit/loss distribution
- Smart contract interaction (oracle-registry, settlement, escrow)
- External API integration (Alpha Vantage, CoinGecko) with mock fallback
- Comprehensive security validation and rate limiting
- Automated scheduling for settlement checks and health monitoring

 Architecture:
- StacksService: Blockchain interaction and transaction management
- AttestationService: Investment tracking and settlement calculations
- ValidationService: Security checks and data validation
- InvestmentDataService: Market data integration
- SettlementScheduler: Automated task scheduling

 Development Experience:
- Fixed path issues with proper npm scripts and convenience startup files
- TypeScript compilation with ES modules support
- Comprehensive testing setup with Jest
- Multiple startup options (npm, batch files, PowerShell scripts)
- Detailed documentation and troubleshooting guides

 Technical Stack:
- Express.js + TypeScript
- Stacks SDK (@stacks/transactions, @stacks/network, @stacks/blockchain-api-client)
- Node-cron for scheduling
- Comprehensive logging and error handling
- Environment-based configuration

Ready for smart contract deployment and integration testing.

--- a/oracle-service/tsconfig.json
+++ b/oracle-service/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
+    "noImplicitAny": false,
     "moduleResolution": "node",
     "allowImportingTsExtensions": false,
     "resolveJsonModule": true,
@@ -16,9 +17,14 @@
     "sourceMap": true,
     "removeComments": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "*": ["*", "../node_modules/*"]
+    }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests"]
+  "exclude": ["node_modules", "dist", "src/tests"]
 }
