--- a/oracle-service/package.json
+++ b/oracle-service/package.json
@@ -1,35 +1,47 @@
 {
   "name": "oracle-service",
   "version": "1.0.0",
-  "description": "Oracle attestation service for investment tracking",
+  "description": "Oracle attestation service for investment tracking with heavy Stacks blockchain integration",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch ./src/index.ts",
+    "dev:verbose": "tsx watch --clear-screen=false ./src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node ./dist/index.js",
+    "start:prod": "NODE_ENV=production node ./dist/index.js",
     "test": "jest",
-    "lint": "eslint src --ext .ts"
+    "test:watch": "jest --watch",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "clean": "rimraf dist",
+    "build:clean": "npm run clean && npm run build"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "axios": "^1.4.0",
-    "dotenv": "^16.3.1",
-    "@stacks/transactions": "^6.13.0",
+    "@stacks/blockchain-api-client": "^7.8.0",
     "@stacks/network": "^6.13.0",
+    "@stacks/transactions": "^6.13.0",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "node-cron": "^3.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
     "@types/node-cron": "^3.0.8",
-    "typescript": "^5.1.6",
-    "tsx": "^3.12.7",
-    "jest": "^29.6.2",
-    "@types/jest": "^29.5.3",
-    "ts-jest": "^29.1.1",
-    "eslint": "^8.45.0",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0"
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
+    "jest": "^29.6.2",
+    "rimraf": "^6.0.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6"
   }
 }
