--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stacks/connect": "^8.2.4",
+    "@stacks/transactions": "^7.3.1",
     "axios": "^1.12.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
