--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@stacks/connect": "^8.2.4",
     "@stacks/transactions": "^7.3.1",
+    "@walletconnect/client": "^1.8.0",
+    "@walletconnect/qrcode-modal": "^1.8.0",
     "axios": "^1.12.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
